--- a/DataTransferObjects/DataTransferObjects.csproj
+++ b/DataTransferObjects/DataTransferObjects.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComboboxItem.cs" />
+    <Compile Include="Match.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LeagueTable.cs" />
     <Compile Include="Team.cs" />
