--- a/DataTransferObjects/DataTransferObjects.csproj
+++ b/DataTransferObjects/DataTransferObjects.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Match.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LeagueTable.cs" />
+    <Compile Include="StryktipsCoupon.cs" />
     <Compile Include="Team.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
