Gjorde om identifiers så dom använder KeyValuePairs. Eftersom databasen inte använder guids måste varje guid ha en motsvarande nyckel i stringformat. Man kan nu göra sql-anrop med hjälp av parametrar. Kommer nog senare skriva egna klasser för KeyValue så man kan få metodanropen typsäkra.
För att Championship ska funka måste man skapa en ny vy, vilket är exakt samma kod som den som redan finns men med den andra tabellen.

--- a/SoccerWPF/SoccerWPF.csproj
+++ b/SoccerWPF/SoccerWPF.csproj
@@ -57,7 +57,11 @@
     <Compile Include="ViewModel\CompareViewModel.cs" />
     <Compile Include="ViewModel\LeagueTableViewModel.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
+    <Compile Include="ViewModel\TeamInfoViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
+    <Compile Include="View\TeamInfoControl.xaml.cs">
+      <DependentUpon>TeamInfoControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\StryktipsetControl.xaml.cs">
       <DependentUpon>StryktipsetControl.xaml</DependentUpon>
     </Compile>
@@ -88,6 +92,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\TeamInfoControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="View\StryktipsetControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
